<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title123"
            style="@style/AudioFileInfoOverlayText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/jugadores"
            android:textSize="50sp" />


        <LinearLayout

            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="0.5">


            <EditText
                android:id="@+id/nombreedit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:layout_weight="2.3"
                android:hint="@string/hintMenuNombre"
                android:inputType="textCapSentences"
                android:maxLength="10"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/sexo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="6dp"
                android:layout_weight="0.4"
                android:gravity="center_vertical"
                android:onClick="sexos"
                android:spinnerMode="dialog"
                android:src="@drawable/mf" />


            <ImageView
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:onClick="agregar"
                android:scaleType="centerInside"
                android:src="@drawable/add" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:background="#aaE0E0E0">


            <ListView

                android:id="@+id/listView"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"

                android:clickable="true"
                android:fadingEdge="horizontal"

                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
              android:layout_margin="6dp"
                android:layout_weight="0.2">

                <ImageView
                    android:id="@+id/reset"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="reset"
                    android:src="@drawable/restart" />
            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/title3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/tituloMenu2"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/sorbosLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnHapy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/happy"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_light"
                android:onClick="Happy"/>

            <Button
                android:id="@+id/btnLito"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lito"
                android:layout_margin="6dp"
                android:background="@android:color/holo_orange_light"
                android:onClick="Lito"/>

            <Button
                android:id="@+id/btnJumo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jumo"
                android:textColor="@android:color/white"
                android:background="@android:color/holo_orange_light"
                android:onClick="Jumo"/>


        </LinearLayout>


        <Button
            android:id="@+id/play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/mybutton"
            android:fontFamily="sana-serif-light"
            android:onClick="jugar"
            android:text="@string/jugar"
            android:textColor="@android:color/white"
            android:textSize="20sp"

            />


    </LinearLayout>


</RelativeLayout>