<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cc00bcd4"
        android:orientation="vertical"
        android:layout_margin="6dp">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/titleGanador"
        android:textSize="60sp"
        android:fontFamily=""
        android:textColor="#f36e21"
        android:layout_margin="16dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hospital"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:textSize="50sp"
        android:fontFamily="sans-serif"
        android:textColor="#ffffff"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"

        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fraseGanador"
        android:textSize="25sp"
        android:fontFamily="sans-serif"
        android:layout_marginBottom="16dp"
        android:textColor="#ffffff"

        />

    <Button
        android:id="@+id/ganaBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnGanador"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:textSize="20sp"
        android:layout_marginLeft="16dp"
        android:textColor="@android:color/white"
        android:background="@drawable/mybutton2"
        android:onClick="volver"
        />

    </LinearLayout>


</LinearLayout>